--- a/index.html
+++ b/index.html
@@ -554,12 +554,131 @@
         background: #fee2e2;
         color: #b91c1c;
       }
+
+      /* ── MOBILE OVERLAY ── */
+      .sidebar-overlay {
+        display: none;
+        position: fixed;
+        inset: 0;
+        background: rgba(13, 17, 23, 0.45);
+        z-index: 15;
+        backdrop-filter: blur(2px);
+      }
+      .sidebar-overlay.open {
+        display: block;
+      }
+
+      /* ── HAMBURGER ── */
+      .hamburger {
+        display: none;
+        align-items: center;
+        justify-content: center;
+        width: 36px;
+        height: 36px;
+        border: 1px solid var(--rule);
+        border-radius: 8px;
+        background: var(--white);
+        cursor: pointer;
+        flex-shrink: 0;
+        flex-direction: column;
+        padding: 8px 7px;
+      }
+      .hamburger span {
+        display: block;
+        width: 100%;
+        height: 1.5px;
+        background: var(--ink);
+        border-radius: 2px;
+        transition: all 0.25s;
+        transform-origin: center;
+      }
+      .hamburger span:nth-child(2) {
+        margin: 4px 0;
+      }
+      .hamburger.open span:nth-child(1) {
+        transform: translateY(5.5px) rotate(45deg);
+      }
+      .hamburger.open span:nth-child(2) {
+        opacity: 0;
+        transform: scaleX(0);
+      }
+      .hamburger.open span:nth-child(3) {
+        transform: translateY(-5.5px) rotate(-45deg);
+      }
+
+      /* ── RESPONSIVE ── */
+      @media (max-width: 768px) {
+        .layout {
+          grid-template-columns: 1fr;
+        }
+
+        aside {
+          position: fixed;
+          top: var(--header-h);
+          left: 0;
+          bottom: 0;
+          width: var(--sidebar-w);
+          z-index: 20;
+          transform: translateX(-100%);
+          transition: transform 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+        aside.open {
+          transform: translateX(0);
+          box-shadow: 4px 0 24px rgba(0, 0, 0, 0.12);
+        }
+
+        main {
+          grid-column: 1;
+        }
+
+        .content-inner {
+          padding: 28px 20px 48px;
+        }
+
+        .welcome {
+          padding: 28px 20px 48px;
+        }
+
+        .welcome-grid {
+          grid-template-columns: 1fr 1fr;
+        }
+
+        .welcome-html-row {
+          flex-direction: column;
+        }
+
+        .hamburger {
+          display: flex;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .welcome-grid {
+          grid-template-columns: 1fr;
+        }
+        .header-title {
+          font-size: 15px;
+        }
+      }
     </style>
   </head>
   <body>
     <div class="layout">
+      <div
+        class="sidebar-overlay"
+        id="sidebar-overlay"
+        onclick="closeSidebar()"
+      ></div>
       <!-- HEADER -->
       <header>
+        <button
+          class="hamburger"
+          id="hamburger"
+          onclick="toggleSidebar()"
+          aria-label="Toggle menu"
+        >
+          <span></span><span></span><span></span>
+        </button>
         <div class="header-eyebrow">Docs</div>
         <div class="header-divider"></div>
         <div class="header-title">DIY Survey &amp; <em>Panel</em> Platform</div>
@@ -772,11 +891,13 @@
       function showWelcome(el) {
         setNav(el);
         showPage("welcome");
+        closeSidebar();
       }
 
       async function loadMd(key, navEl) {
         setNav(navEl);
         showPage(key);
+        closeSidebar();
         const pageEl = document.getElementById("page-" + key);
 
         if (cache[key]) {
@@ -803,6 +924,22 @@
           </div>
         </div>`;
         }
+      }
+
+      // mobile sidebar
+      function toggleSidebar() {
+        const aside = document.querySelector("aside");
+        const overlay = document.getElementById("sidebar-overlay");
+        const btn = document.getElementById("hamburger");
+        const isOpen = aside.classList.contains("open");
+        aside.classList.toggle("open", !isOpen);
+        overlay.classList.toggle("open", !isOpen);
+        btn.classList.toggle("open", !isOpen);
+      }
+      function closeSidebar() {
+        document.querySelector("aside").classList.remove("open");
+        document.getElementById("sidebar-overlay").classList.remove("open");
+        document.getElementById("hamburger").classList.remove("open");
       }
 
       // keyboard shortcut 0=home, 1–5=docs
